--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
 					</compilerArgs>
 				</configuration>
 			</plugin>
+			<!--
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>axistools-maven-plugin</artifactId>
@@ -126,7 +127,7 @@
 				<executions>
 					<execution>
 						<id>wsdl2java</id>
-						<!-- <phase>prepare-package</phase> -->
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>wsdl2java</goal>
 						</goals>
@@ -144,6 +145,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
