--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<java.version>1.8</java.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.2.3</logback.version>
+		<jackson.version>[2.9.8,)</jackson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -74,12 +75,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.9.6</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.6</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
