--- a/pom.xml
+++ b/pom.xml
@@ -189,4 +189,96 @@
 			-->
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>cxf</id>
+
+			<properties>
+				<java.version>1.8</java.version>
+				<cxf.version>3.3.2</cxf.version>
+			</properties>
+
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-core</artifactId>
+					<version>${cxf.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-tools-common</artifactId>
+					<version>${cxf.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-rt-frontend-simple</artifactId>
+					<version>${cxf.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-rt-transports-http</artifactId>
+					<version>${cxf.version}</version>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<verbose>true</verbose>
+							<fork>true</fork>
+							<compilerVersion>${java.version}</compilerVersion>
+							<source>${java.version}</source>
+							<target>${java.version}</target>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.cxf</groupId>
+						<artifactId>cxf-codegen-plugin</artifactId>
+						<version>${cxf.version}</version>
+						<executions>
+							<execution>
+								<id>test-service</id>
+								<phase>generate-sources</phase>
+								<configuration>
+									<sourceRoot>${basedir}/target/generated/src/main/java</sourceRoot>
+									<wsdlOptions>
+										<wsdlOption>
+											<wsdl>${basedir}/src/main/resources/wsdl/test.wsdl</wsdl>
+											<serviceName>Test_Operation_Manager</serviceName>
+											<bindingFiles>
+												<bindingFile>${basedir}/src/main/resources/wsdl/test_binding.xml</bindingFile>
+											</bindingFiles>
+											<extraargs>
+												<extraarg>-xjc-Xts</extraarg>
+											</extraargs>
+										</wsdlOption>
+									</wsdlOptions>
+								</configuration>
+								<goals>
+									<goal>wsdl2java</goal>
+								</goals>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>xerces</groupId>
+								<artifactId>xercesImpl</artifactId>
+								<version>2.12.0</version>
+							</dependency>
+							<dependency>
+								<groupId>org.apache.cxf</groupId>
+								<artifactId>cxf-xjc-ts</artifactId>
+								<version>${cxf.version}</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+
+			</build>
+	    </profile>
+	</profiles>
 </project>
