--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.e-payment</groupId>
 	<artifactId>cybersource-soap-java</artifactId>
-	<version>1.155</version> <!-- cybs 1.141 -->
+	<version>1.141</version> <!-- cybs 1.141 -->
 	<name>cybersource-soap-java</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.0</version>
+			<version>[3.0,]</version>
 		</dependency>
 
 		<dependency>
@@ -120,7 +120,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.6</version>
+			<version>[4.5.6,)</version>
 		</dependency>
 
 		<!-- Logger -->
@@ -164,7 +164,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -213,8 +213,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!--
+<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -236,7 +235,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			-->
+-->
 		</plugins>
 	</build>
 </project>
