--- a/test-3ds-web/pom.xml
+++ b/test-3ds-web/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jetty.version>9.4.18.v20190429</jetty.version>
 	</properties>
 
     <build>
@@ -34,7 +35,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.18.v20190429</version>
+                <version>${jetty.version}</version>
                 <configuration>
                     <webApp>
                         <contextPath>/</contextPath>
